[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
python_version = "3.9"
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
max-line-length = 120