[tool.poetry]
name = "pavo"
version = "0.1.0"
description = "Static Site Generation using Python made easy."
authors = ["Job Veldhuis <job@baukefrederik.me>"]

[tool.poetry.dependencies]
python = "^3.10"
markdown2 = "^2.4.2"
python-frontmatter = "^1.0.0"
libsass = "^0.21.0"
PyYAML = "^6.0"
Jinja2 = "^3.0.3"
requests = "^2.27.1"
tornado = "^6.1"
colorama = "^0.4.4"
tabulate = "^0.8.9"
Pygments = "^2.11.2"
urllib3 = "^1.26.8"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
pylint = "^2.12.2"
types-setuptools = "^57.4.7"
types-tabulate = "^0.8.5"
types-requests = "^2.27.7"
types-PyYAML = "^6.0.3"
black = "^22.3.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
pavo="pavo.app:run_console_application"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
python_version = "3.10"
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    'broad-except',
    'useless-return',
    'missing-module-docstring',
    'too-few-public-methods'
]

[tool.coverage.report]
fail_under = 95

[tool.coverage.run]
omit = [
    'pavo/__main__.py'
]